# statcandb

./: .env.sample  .gitignore  Dockerfile  LICENSE  README.md  db.db  pyproject.toml
.github/workflow/: build.yml
examples/: census.py  parquet.py  statcan.py
src/statcandb/: config.py  cubes.py  delta_files.py  file_utils.py  models.py  pbar_utils.py  s3.py
src/statcandb/cli/: db.py  delta.py  full.py  grab.py  main.py
tests/: test_cli_delta.py  test_cubes.py  test_delta_files.py  test_file_utils.py
tests/fixtures/: 20230715.csv  23100309.csv  README.md  getAllCubesListLite.json
